--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="copy"></button>
       </div>
       <div class="recent">
-        <button id="recent" onclick="renderRecentLinks()">Recent</button>
+        <button id="recent" onclick="renderRecentLinks()">Recent Links</button>
       </div>
       <div id="recent-url-modal">
         <div id="recent-url-content">
